[package]
name = "sqlx_test"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0 License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

