[package]
name = "sqlx_test"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0 License"
authors = ["sdoerig@bluewin.ch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
actix-web = "4"
actix-rt = "2.6.0"
async-trait = "0.1.52"
sha3 = "0.10.0"
hex = "0.4.3"